* 2016.11.14 - added support to reuse preinstall scripts from other entries during package installation
             - added support for CrystaX Android NDK
             - added extra soft name customization from soft customize.py scripts

* 2016.11.11 - fixed bug: no possible not to search for installed software
               but install from packages (useful for Caffe for Android via CK)

* 2016.11.10 - skiping Android device detection during software detection (if not needed)
             - added gflags soft description
             - added glog soft description
             - added lmdb soft description
             - removed soft:lib.opencv.android and moved Android target to lib.opencv
             - added possibility to set ABI in the installation path (for Android)
             - added protobuf soft description

* 2016.11.08 - improved software detection (now can include sub-path in search)
             - can add GPGPU features to installation scripts
             - added soft:compiler.computecpp

* 2016.11.07 - added soft description 'tool.bazel' (useful to recompile Google's TensorFlow)

* 2016.11.04 - making os.getcwd() safer

* 2016.10.24 - added lib.tiny-dnn
             - fixes possible issues when installing packages for Android devices

* 2016.10.21 - added dependency on ARM WA tool if adding target machine that uses WA ...
             - added soft:android.sdk description and detection

* 2016.10.18 - added 'no_tags' to prune environments (set function) ...

* 2016.10.12 - added latest x86/x86_64 android OS descriptions (needed for ARM Workload Automation via CK)
             - added 'ck browse platform.*'

* 2016.10.11 - added 'shell' function to 'os' module to automate simple script execution

* 2016.10.10 - added detection of CPU clusters for Workload automation

* 2016.10.05 - obtaining real serial number of ADB devices (if via network) + adding dep on ADB tool for remote devices
