@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "fd44428fbc77f77f",
+  "backup_module_uid": "84e27ad9dd12e734",
+  "backup_module_uoa": "script",
+  "control": {
+    "author": "cTuning foundation",
+    "author_email": "admin@cTuning.org",
+    "author_webpage": "http://cTuning.org",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2016-11-14T15:47:01.626835",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "1",
+      "8",
+      "3",
+      "2"
+    ]
+  },
+  "data_name": "process-compiler-for-cmake"
+}
